--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.0.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "nodemon": "^2.0.22"
   }
